# cmi-kaggle-competition

./: Makefile  README.md  cmi_eda_starter.ipynb  pyproject.toml
cmi_kaggle_competition/: __init__.py  dataset.py  features.py  plots.py
cmi_kaggle_competition/modeling/: predict.py  train.py
notebooks/: 001_load_and_explore_the_data.ipynb
