[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cmi_kaggle_competition"
version = "0.0.1"
description = "Predicting Body Focused Repetitive Behaviors from a Wrist-Worn Device"
authors = ["gaetan"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cmi_kaggle_competition" }]

[tool.poetry.dependencies]
python = "~3.12.0"
loguru = "*"
pip = "*"
pytest = "*"
python-dotenv = "*"
ruff = "*"
tqdm = "*"
typer = "*"
polars = "^1.32.0"
ipykernel = "^6.30.0"
seaborn = "^0.13.2"

[tool.ruff]
line-length = 99
src = ["cmi_kaggle_competition"]
include = ["pyproject.toml", "cmi_kaggle_competition/**/*.py"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cmi_kaggle_competition"]
force-sort-within-sections = true

